--- a/themes/mccoll-therapy/sass/layout/_navigation.scss
+++ b/themes/mccoll-therapy/sass/layout/_navigation.scss
@@ -187,4 +187,7 @@
 	.active {
 		color: $color__navy;
 	}
+	button {
+		box-shadow: none;
+	}
 }
